--- a/index.html
+++ b/index.html
@@ -1,37 +1,39 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8"/>
-        <title>Kartikeya's Portfolio</title>
+        <title>Resume</title>
     </head>
-
     <body>
-        <h1>Kartikeya Tiwari's Portfolio</h1>
-        <h2>I'm a Web Developer</h2>
+        <h1>Kartikeya Tiwari</h1>
+        <img src="./kk-profile.jpg" height="200" alt="my profile pic"/>
+        <h2>Summary</h2>
+        <p>Pursuing Bachelor's in Computer Science Engg. from a Prestigious University in Lucknow, Uttar Pradesh. Interested in FullStack Web Development and currently engaged in a course provided by Udemy. Learning and Practicing Data Structures and Algorithms in Java parallely and Practicing Programs in C language. Focussing on gathering In-Depth Knowledge of these three Courses and becoming a Full-Fledged Software Engineer through which I can help and fulfill company's needs as software developer</p>
         <hr/>
-      <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-      <img src="./assets/images/kartikeysmovie.png" height="200" alt="ss of movie ranking"/>
-      <br/>
-      <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-      <img src="./assets/images/birthdaykk.png" height="200" alt="birthday preview"/>
-      <hr/>
-      <a href="./public/about.html">About Me</a>
-      <a href="./public/contact.html">Contact Me</a>
-
+        <h2>Education</h2>
+        Bachelor's of Technology in Computer Science Engg. from Babu Banarasi Das University, Lucknow
+        <hr/>
+        <h2>Work Experience</h2>
+        <p>Worked as a Student in Many Events and Cultural Programs Organised by Colleges and Lead a Whole Batch of Students in these events.</p>
+        <hr/>
+        <h2>Skills</h2>
+        <ul>
+            <li>Communication Skills</li>
+            <li>Java</li>
+            <li>Python for Data Science</li>
+            <li>Full Stack Web Developer</li>
+        </ul> 
+        <hr/>
+        <h2>Awards and Certifications</h2> 
+        <p>Cleared the Amcat Exam with Outstanding Grades.</p>
+        <hr/>
+        <h2>Others</h2>
+        <a href="./contact.html">Contact</a>
+        <a href="./hobbies.html">Hobbies</a>
+        <footer>
+            <p>
+                © Kartikeya Tiwari. All Rights Reserved.
+            </p>
+        </footer>
     </body>
 </html>
